2007-05-30  Chris Morley

	* include/openbabel/base.h(tokenize): Add \r to default
	delimiters in the two functions. Now Windows or MAC files
	(esp data files) should be read properly. 
	Cures bug #1727333, I hope.
	
2007-05-30  Chris Morley

	* src/fingerprint.cpp(Tanimoto): return 0.0 if no bits set.
	Should cure bug #1728410.
	
2007-05-30  Chris Morley

	* include/openbabel/lineend.h: remove sync()call from destructor
	so that can delete in OBConversion's destructor after
	istreams have gone.
	
	* include/openbabel/obconversion.h, *src/obconversion.cpp
	Add InstallStreamFilter() and call from Read() and Convert().
	I hope this will cure the Windows Python bug, and is a neater
	method all round.
	 
2007-05-25  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cdxmlformat.cpp: don't clear the molecule
	before writing. [#1725343]

2007-05-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* */Makefile.in: Regenerate UNIX build files.

	* src/plugin.cpp: Make sure to #include <iterator> to solve GCC
	compile problem. 

	* src/descriptor.cpp: Change _isnan to IsNan, as discussed on the
	list to solve GCC compile problem.

	* scripts/*: Updated to compile. May have removed functionality
	because of plugin changes.

	* tools/obminimize.cpp, tools/obgen.cpp, tools/obenergy.cpp:
	Switch to OBPlugin::List().

2007-05-17  Chris Morley

	* tools/obprop.cpp: mods to use new versions of logP etc.
	
	* include/openbabel/groupcontrib.h, src/goupcontrib.cpp:
	move declarations of OBGroupContib into header file and delete
	OBLogP etc which should not have been there but still compiled.
	
	* src/plugin.cpp(ListAsVector): Add support for only IDs.
	
	* include/openbabel/fingerprint.h:comment had become
	uncommented.
	
2007-05-16  Noel O'Boyle <baoilleach@gmail.com>

	* Added Chris's header changes to Makefile.am
	* Removed comments starting with //* as they confused SWIG as there
	was no matching */
	* python SWIG interface file: Included the new headers